k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: backend-ingress
 namespace: default
 annotations:
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
   alb.ingress.kubernetes.io/success-codes: "200-399"
   alb.ingress.kubernetes.io/group.name: backend-group
spec:
 ingressClassName: alb
 rules:
   - host: anuj-jain.online
     http:
       paths:
         - path: /api/auth
           pathType: Prefix
           backend:
             service:
               name: auth-service
               port:
                 number: 3000
   - host: anuj-jain.online
     http:
       paths:
         - path: /api/notif
           pathType: Prefix
           backend:
             service:
               name: notifications-service
               port:
                 number: 3000
